--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,25 +1,55 @@
-/*--------------------------------------------------------------
-# Header
---------------------------------------------------------------*/
+/* header.css */
 .header {
-    height: 90px;
-    transition: all 0.5s;
-    z-index: 997;
-    background: #f2f2f2;
-  }
-  
-  .header.sticked {
-    height: 70px;
-  }
-  
-  .header .logo img {
-    max-height: 40px;
-    margin-right: 6px;
-  }
-  
-  .header .logo h1 {
-    font-size: 30px;
-    font-weight: 700;
-    color: var(--color-default);
-    font-family: var(--font-primary);
-  }
+  height: 90px;
+  transition: all 0.5s;
+  z-index: 997;
+  background: #f2f2f2;
+}
+
+.header.sticked {
+  height: 70px;
+}
+
+.header .logo img {
+  max-height: 40px;
+  margin-right: 6px;
+}
+
+.header .logo h1 {
+  font-size: 30px;
+  font-weight: 700;
+  color: var(--color-default);
+  font-family: var(--font-primary);
+}
+
+/* User Menu */
+.user-menu {
+  position: absolute;
+  top: 40px;
+  right: 0;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  padding: 10px;
+  min-width: 200px;
+}
+
+.user-menu-header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.user-menu-header i {
+  font-size: 24px;
+  margin-right: 10px;
+}
+
+.user-menu-options p {
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.user-menu-options p:hover {
+  background-color: #f2f2f2;
+}
