--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,6 +94,12 @@ section {
   border-color: var(--color-black);
 }
 
+.btn.btn-primary:active {
+  background-color: var(--color-gray);
+  color: var(--color-white);
+  border-color: var(--color-gray);
+}
+
 /*--------------------------------------------------------------
 # Not Found Page
 --------------------------------------------------------------*/
