--- a/src/app/register/registerform.css
+++ b/src/app/register/registerform.css
@@ -6,10 +6,10 @@
   background-repeat: no-repeat; */
 
   /* Untuk Webkit (Safari/Chrome 10+) */
-background: -webkit-linear-gradient(to right, #333, #777, #aaa, #ddd);
+background: -webkit-linear-gradient(to right, #333, #777, #aaa);
 
 /* Untuk W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-background: linear-gradient(to right, #333, #777, #aaa, #ddd);
+background: linear-gradient(to right, #333, #777, #aaa);
 
 
 }
