--- a/src/app/postitems/style.css
+++ b/src/app/postitems/style.css
@@ -1,20 +1,95 @@
-/* postItems.css */
 .main-container {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh; /* Ensures the main container covers the full height of the viewport */
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* Ensures the main container covers the full height of the viewport */
+}
+
+.posts {
+  flex: 1; /* Ensures the posts section takes up the remaining space */
+}
+
+#footer {
+  background-color: var(--color-black);
+  color: var(--color-white);
+  font-family: var(--font-primary);
+  padding: 30px;
+  margin-top: auto; /* Pushes the footer to the bottom of the page */
+  text-align: center;
+}
+
+.pagination-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  padding-left: 0;
+  list-style: none;
+}
+
+.pagination li {
+  display: inline;
+}
+
+.pagination li a.page-link,
+.pagination li:first-child a.page-link,
+.pagination li:last-child a.page-link {
+  width: 40px;
+  height: 40px;
+  line-height: 36px;
+  border-radius: 50%;
+  border: 2px solid var(--color-black);
+  padding: 0;
+  margin-right: 10px;
+  font-size: 17px;
+  font-weight: 600;
+  color: var(--color-black);
+  position: relative;
+  text-align: center;
+  display: inline-block;
+}
+
+.pagination li:last-child a.page-link {
+  margin-right: 0;
+}
+
+.pagination li a.page-link:hover {
+  border-color: var(--color-black);
+  color: #fff;
+  z-index: 1;
+}
+
+.pagination li a.page-link:before {
+  content: "";
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: var(--color-black);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  opacity: 0;
+  z-index: -1;
+  transform: translate(-50%, -50%);
+  transition: all 0.3s ease 0s;
+}
+
+.pagination li:hover a.page-link:before,
+.pagination li.active a.page-link:before {
+  opacity: 1;
+}
+
+.pagination li.active a.page-link {
+  background: var(--color-black);
+  border-color: var(--color-black);
+  color: #fff;
+}
+
+@media only screen and (max-width: 359px) {
+  .pagination {
+    display: block;
   }
-  
-  .posts {
-    flex: 1; /* Ensures the posts section takes up the remaining space */
-  }
-  
-  #footer {
-    background-color: var(--color-black);
-    color: var(--color-white);
-    font-family: var(--font-primary);
-    padding: 30px;
-    margin-top: auto; /* Pushes the footer to the bottom of the page */
-    text-align: center;
-  }
-  
+}
