--- a/src/app/postitems/[id]/style.css
+++ b/src/app/postitems/[id]/style.css
@@ -29,11 +29,19 @@
   transform: translateX(-50%);
 }
 
+.button {
+  justify-content: center;
+}
+
 @media (max-width: 1255px) {
   .post-content figure {
     min-width: auto;
     left: auto !important;
     transform: none;
+  }
+
+  .button {
+    margin-bottom: 20px;
   }
 }
 
