--- a/src/app/postitems/style.css
+++ b/src/app/postitems/style.css
@@ -88,8 +88,61 @@
   color: #fff;
 }
 
+.search-bar {
+  position: relative;
+  margin-bottom: 40px;
+}
+
+.search-bar .bi-search {
+  position: absolute;
+  top: 17px;
+  left: 20px;
+  color: #9ca3af;
+}
+
+.form span {
+  position: absolute;
+  right: 17px;
+  top: 13px;
+  padding: 2px;
+  border-left: 1px solid #d1d5db;
+}
+
+.left-pan {
+  padding-left: 7px;
+}
+
+.left-pan i {
+  padding-left: 10px;
+}
+
+.form-input {
+  height: 55px;
+  text-indent: 33px;
+  border-radius: 10px;
+}
+
+/* .form-input:focus {
+  box-shadow: none;
+  border: none;
+} */
+
+.no-posts {
+  text-align: center;
+  font-size: 18px;
+  color: var(--color-black);
+  margin-top: 20px;
+}
+
 @media only screen and (max-width: 359px) {
   .pagination {
     display: block;
   }
 }
+
+@media (max-width: 768px) {
+  .search-bar {
+    width: 100%;
+  }
+}
+
